# gtk-nfc

./: CLAUDE.md  Cargo.toml
src/: app.rs  main.rs
src/nfc/: libnfc_backend.rs  mod.rs  pcsc_backend.rs  watcher.rs
src/ui/: window.rs
