[package]
name = "gtk-nfc"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "GTK4 app for reading, cloning, and creating RFID/NFC tags"
license = "GPL-3.0-or-later"
repository = "https://github.com/hilgardt-collab/gtk-nfc"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_7"] }
glib = "0.22"
async-channel = "2"
pcsc = "2.9"
nfc1 = { version = "0.7", optional = true }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[features]
default = []
libnfc = ["dep:nfc1"]

[profile.release]
lto = "thin"
codegen-units = 1
